Cranberry 架构概览 编写平台章节

--- a/hugo.toml
+++ b/hugo.toml
@@ -5,3 +5,9 @@ theme = 'hugo-book'
 
 [markup.highlight]
   style = 'github'
+
+
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
